# forecast-datacube-demo

./: .pre-commit-config.yaml  README.md  environment.yml  gfs.py  hrrr-cube.ipynb  lib.py  modal_app.py  modal_gfs.py  modal_hrrr.py  modal_hrrr_icechunk.py  pyproject.toml
src/: gfs.py  hrrr.py  index.py  lib.py  lib_modal.py  modal_app.py  models.py
src/configs/: gfs.toml  hrrr-3d.toml  hrrr-icechunk.toml  hrrr.toml
