[project]
name = "forecast-ingest-demo"
version = "0.1.0"
description = "Forecast ingestion demo"
requires-python = ">=3.12"
dependencies = [
    "arraylake",
    "icechunk>=1",
    "certifi",
    "cfgrib",
    "dask",
    "fsspec",
    "herbie-data",
    "s3fs",
    "xarray",
    "eccodes==2.37",
    "pyproj",
    "zarr>=3",
    "modal",
    "pydantic>2",
    "pdbpp",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "F",    # Pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PIE",  # flake8-pie
  "TID",  # flake8-tidy-imports (absolute imports)
  "PGH",  # pygrep-hooks
  "PERF", # Perflint
  "RUF",
]
extend-safe-fixes = [
  "TID252",  # absolute imports
]
ignore = [
  "E402",    # module level import not at top of file
  "E501",    # line too long - let the formatter worry about that
  "E731",    # do not assign a lambda expression, use a def
  "UP007",   # use X | Y for type annotations
  "UP032",   # format in logger statements
  "C40",     # unnecessary generator, comprehension, or literal
  "PGH003",  # type:ignore without code
  "PIE790",  # unnecessary pass statement
  "PERF203", # try-except within a loop incurs performance overhead
  "RUF001",  # string contains ambiguous unicode character
  "RUF002",  # docstring contains ambiguous acute accent unicode character
  "RUF003",  # comment contains ambiguous no-break space unicode character
  "RUF005",  # consider unpacking operator instead of concatenation
  "RUF012",  # mutable class attributes
]

# TODO: mypy improvements for these
[[tool.mypy.overrides]]
ignore_missing_imports = true
module=[
"cartopy.*",
"fsspec.*",
"herbie.*",
"modal.*",
"pyproj.*",
"zarr.*",
]
